--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_RESEARCH_SYSTEM_ENDPOINT=http://10.10.8.25:8003/api/
-VITE_YMIR_ENDPOINT=http://10.10.8.25:8003/api/
+VITE_YMIR_ENDPOINT=http://10.10.13.6:8080/api/
+VITE_YMIR_TOKEN=80|QPc9Bl91A73gp5nRWWoNsZUATCGpFRDOlBZ92IFU
